--- a/TASK 1 (portfolio)/index.html
+++ b/TASK 1 (portfolio)/index.html
@@ -35,7 +35,7 @@
             I'm <span>Priyanka<br />a</span> Web Developer
           </h1>
           <p class="description">
-            Welcome to my web developer portfolio! I'm a passionate and skilled web developer with a strong focus on creating beautiful, responsive, and user-friendly websites. I've had the pleasure of working on a diverse range of projects, from personal blogs to e-commerce platforms. My goal is to turn ideas into interactive and visually appealing websites, and I'm excited to collaborate on your next web project. Explore my work and feel free to get in touch with any inquiries or project proposals. Let's create something amazing together!
+            Welcome to my web developer portfolio! I'm a passionate and skilled web developer with a strong focus on creating beautiful, responsive, and user-friendly websites. I've had the pleasure of working on a diverse range of projects. My goal is to turn ideas into interactive and visually appealing websites, and I'm excited to collaborate on your next web project. Explore my work and feel free to get in touch with any inquiries or project proposals. Let's create something amazing together!
           </p>
           <div class="action__btns">
             <a class="home-btn" href="https://linktr.ee/priyankaa_2004" target="_blank">Linktree</a>
