--- a/TASK 2 (landing page)/index.html
+++ b/TASK 2 (landing page)/index.html
@@ -93,7 +93,7 @@
           <a href="#"><i class="ri-instagram-fill"></i></a>
       </div>
   </div>
-  <p class="footer__copyright">© 2023 TravelX. All Rights Reserved.</p>
+  <p class="footer__copyright">© 2023 TravelX.  Designed by <b>Priyanka Panigrahi</b>. All Rights Reserved.</p>
 </footer>
 
 
